--- a/src/assets/theme/app.scss
+++ b/src/assets/theme/app.scss
@@ -10,8 +10,7 @@
 html,
 body,
 #app {
-	width: 100%;
-	height: 100%;
+	// width: 100%;
 	background-color: var(--color-bg);
 	font-size: var(--fontSize-big);
 	font-family:MiLan-Regular;
