--- a/src/assets/theme/common/font.scss
+++ b/src/assets/theme/common/font.scss
@@ -1,19 +1,19 @@
 @font-face {
     font-family:MiLan-Regular;
-    src: url('~@/assets/fonts/MI Lan Pro_Regular.otf')  format('truetype');
+    src: url('~@/assets/fonts/MyriadPro-Regular.otf')  format('truetype');
 }
 @font-face {
     font-family:MiLan-Medium;
-    src: url('~@/assets/fonts/MI Lan Pro_Medium.otf')  format('truetype');
+    src: url('~@/assets/fonts/MyriadPro-Bold.otf')  format('truetype');
 }
 /*
 ---------定义字体大小
 */
-$--fontSize-max:20px;
-$--fontSize-smax:18px;
-$--fontSize-big:16px;
-$--fontSize-default:14px;
-$--fontSize-small:12px;
+$--fontSize-max:24px;
+$--fontSize-smax:20px;
+$--fontSize-big:18px;
+$--fontSize-default:16px;
+$--fontSize-small:14px;
 
 :root {
     --fontSize-max: #{$--fontSize-max};
