--- a/src/assets/theme/common/var.scss
+++ b/src/assets/theme/common/var.scss
@@ -1,6 +1,6 @@
 /* 定义初始颜色
 ------------------------------- */
-$--color-primary: #32bac0 !default;
+$--color-primary: #48A0DC !default;
 $--color-warning: #f5a623 !default;
 $--color-error: #f43f31 !default;
 $--color-blue: #0d84ff !default;
