--- a/src/assets/theme/element-variables.scss
+++ b/src/assets/theme/element-variables.scss
@@ -1,6 +1,6 @@
 $base-color-black: #222;
 $base-color-blue: #0d84ff;
-$base-color-main: #32bac0;
+$base-color-main: #48A0DC;
 $base-color-green: #13ce66;
 $base-color-white: #fff;
 $base-color-black: #515a6e;
@@ -23,11 +23,11 @@ $base-background-color-base: #f5f7fa;
 //默认层级
 $base-z-index: 1999;
 //字体大小配置
-$base-font-size-small: 12px;
-$base-font-size-default: 14px;
-$base-font-size-big: 16px;
-$base-font-size-bigger: 18px;
-$base-font-size-max: 22px;
+$base-font-size-small: 14px;
+$base-font-size-default: 16px;
+$base-font-size-big: 18px;
+$base-font-size-bigger: 20px;
+$base-font-size-max: 24px;
 //圆角
 $base-border-radius: 3.5px;
 // 大圆角
