--- a/src/assets/theme/element.scss
+++ b/src/assets/theme/element.scss
@@ -25,9 +25,12 @@
 /* Button 按钮
 ------------------------------- */
 // 第三方字体图标大小
+.el-button{
+	font-size: 16px !important;
+}
 .el-button i.iconfont,
 .el-button i.fa {
-	font-size: 14px !important;
+	font-size: 16px !important;
 	margin-right: 5px;
 }
 .el-button--mini ,.el-button--medium{
@@ -148,7 +151,7 @@
 	font-weight: 400;
 }
 .el-table--enable-row-transition .el-table__body td.el-table__cell{
-	color:#000;
+	color:#666;
 	font-size:20px;
 }
 .el-table thead{
@@ -166,7 +169,8 @@ table{
     background:#f7f7f7;
 }
 #dayAnalysis .el-table th.el-table__cell.is-leaf{
-	border:none
+	border:none;
+	background:#f7f7f7;
 }
 #app #dayAnalysis .el-table td.el-table__cell{
 	border-bottom:1px solid #666;
@@ -316,13 +320,13 @@ table{
 }
 // 第三方图标字体间距/大小设置
 .el-menu-item{
-	font-size:var(--fontSize-big) !important;
+	font-size:var(--fontSize-default) !important;
 }
 .el-menu-item .iconfont,
 .el-submenu .iconfont,
 .el-menu-item .fa,
 .el-submenu__title .fa {
-	font-size: var(--fontSize-big) !important;
+	font-size: var(--fontSize-default) !important;
 	display: inline-block;
 	vertical-align: middle;
 	margin-right: 5px;
@@ -332,7 +336,7 @@ table{
 // element plus 本身字体图标
 .el-submenu [class^='el-icon-'],
 .el-menu-item [class^='el-icon-'] {
-	font-size: var(--fontSize-big) !important;
+	font-size: var(--fontSize-default) !important;
 }
 /* Breadcrumb 面包屑
 ------------------------------- */
@@ -516,14 +520,15 @@ table{
 	right:8px;
 	top:13px;
 	color:#c0c4cc;
+	z-index:3;
   }
   .userinfobox .el-input--prefix .el-input__inner{
 	padding-left:15px;
   }
-  .edit-select .el-select-dropdown__item.is-disabled{
-	border-bottom:1px solid #e5e5e5;
-	color:#000;
-  }
+//   .edit-select .el-select-dropdown__item.is-disabled{
+// 	border-bottom:1px solid #e5e5e5;
+// 	color:#000;
+//   }
 .el-date-table td.default span{
 	color:var(--color-primary);
 }
@@ -605,4 +610,20 @@ table{
 /*进度条*/
 .progress .el-progress{
 	width:400px;
+}
+// 登录.main-login
+.main-login .el-form--label-top .el-form-item__label{
+	padding:0;
+}
+.main-login .el-form-item{
+	margin-bottom:10px;
+}
+// .el-dropdown
+.el-dropdown{
+	font-size: var(--fontSize-small);
+	color:var(--color-black-80);
+}
+// 设置页面
+.specialLabel .el-form-item__label{
+	line-height: 1;
 }
